# mostsignificant.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.markdown  linklist.markdown
_includes/: head.html  header.html  image.html
_layouts/: home.html  post.html
_posts/: 2021-04-18-parsing-command-line-arguments-in-C++.markdown  2021-04-18-welcome-to-jekyll.markdown  2021-11-01-welcome-to-my-tech-blog.markdown  2021-11-03-3-ways-to-parse-command-line-arguments-in-C++-quick-do-it-yourself-or-comprehensive.markdown  2021-11-03-how-to-save-time-by-running-tedious-automatically-on-every-file-change.markdown  2022-01-30-a-clear-10-step-plan-to-master-your-next-developer-tech-interview.markdown  2022-03-31-python-like-enumerate-in-C++.markdown  2022-04-24-make-your-way-through-apaches-big-data-stack-spark-kafka-hadoop-and-co.markdown  2022-10-26-why-you-should-upgrade-now-all-the-new-goodness-in-python-3-11.markdown  2022-11-06-create-a-simple-but-effective-json-file-converter-with-jinja2-in-python.markdown  2022-12-31-a-practical-guide-to-containerize-your-c++-application-with-docker.markdown  2023-01-30-your-sql-database-needs-test-data-generate-it-quickly-with-python-and-faker.markdown  2023-02-26-python-data-validation-made-easy-with-the-great-expectations-package.markdown  2023-03-27-crafting-a-robust-distributed-keyvalue-store-in-rust-with-chatgpt's-help.markdown  2023-06-13-empower-new-python-projects-with-github-building-and-sharing-your-first-library.markdown  (+29 more)
_sass/: minima.scss
scripts/: create_post.py  pyproject.toml
scripts/src/: create_post.py
(+4 files in other folders)
